fix: vo命名改为res
