# api/http/swagger.json
@@ -37,7 +37,7 @@
                     "200": {
                         "description": "登录成功",
                         "schema": {
-                            "$ref": "#/definitions/vo.LoginResponse"
+                            "$ref": "#/definitions/res.LoginResponse"
                         }
                     },
                     "400": {
@@ -83,7 +83,7 @@
                     "200": {
                         "description": "登出成功",
                         "schema": {
-                            "$ref": "#/definitions/vo.LogoutResponse"
+                            "$ref": "#/definitions/res.LogoutResponse"
                         }
                     },
                     "400": {
@@ -129,7 +129,7 @@
                     "200": {
                         "description": "注册成功",
                         "schema": {
-                            "$ref": "#/definitions/vo.RegisterResponse"
+                            "$ref": "#/definitions/res.RegisterResponse"
                         }
                     },
                     "400": {
@@ -171,7 +171,7 @@
                     "200": {
                         "description": "更新成功",
                         "schema": {
-                            "$ref": "#/definitions/vo.UpdateUserResponse"
+                            "$ref": "#/definitions/res.UpdateUserResponse"
                         }
                     },
                     "400": {
@@ -215,7 +215,7 @@
                     "200": {
                         "description": "创建成功",
                         "schema": {
-                            "$ref": "#/definitions/vo.CreateUserResponse"
+                            "$ref": "#/definitions/res.CreateUserResponse"
                         }
                     },
                     "400": {
@@ -257,7 +257,7 @@
                     "200": {
                         "description": "获取成功",
                         "schema": {
-                            "$ref": "#/definitions/vo.BatchGetUsersResponse"
+                            "$ref": "#/definitions/res.BatchGetUsersResponse"
                         }
                     },
                     "400": {
@@ -299,7 +299,7 @@
                     "200": {
                         "description": "更新成功",
                         "schema": {
-                            "$ref": "#/definitions/vo.UpdatePasswordResponse"
+                            "$ref": "#/definitions/res.UpdatePasswordResponse"
                         }
                     },
                     "400": {
@@ -347,7 +347,7 @@
                     "200": {
                         "description": "获取成功",
                         "schema": {
-                            "$ref": "#/definitions/vo.GetUserResponse"
+                            "$ref": "#/definitions/res.GetUserResponse"
                         }
                     },
                     "400": {
@@ -551,18 +551,18 @@
                 }
             }
         },
-        "vo.BatchGetUsersResponse": {
+        "res.BatchGetUsersResponse": {
             "type": "object",
             "properties": {
                 "users": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/vo.User"
+                        "$ref": "#/definitions/res.User"
                     }
                 }
             }
         },
-        "vo.CreateUserResponse": {
+        "res.CreateUserResponse": {
             "type": "object",
             "properties": {
                 "email": {
@@ -576,15 +576,15 @@
                 }
             }
         },
-        "vo.GetUserResponse": {
+        "res.GetUserResponse": {
             "type": "object",
             "properties": {
                 "user": {
-                    "$ref": "#/definitions/vo.User"
+                    "$ref": "#/definitions/res.User"
                 }
             }
         },
-        "vo.LoginResponse": {
+        "res.LoginResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -598,7 +598,7 @@
                 }
             }
         },
-        "vo.LogoutResponse": {
+        "res.LogoutResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -606,7 +606,7 @@
                 }
             }
         },
-        "vo.RegisterResponse": {
+        "res.RegisterResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -617,7 +617,7 @@
                 }
             }
         },
-        "vo.UpdatePasswordResponse": {
+        "res.UpdatePasswordResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -625,48 +625,7 @@
                 }
             }
         },
-        "vo.UpdateUserResponse": {
-            "type": "object",
-            "properties": {
-                "avatar": {
-                    "type": "string"
-                },
-                "bio": {
-                    "type": "string"
-                },
-                "birthday": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "gender": {
-                    "type": "integer"
-                },
-                "login_at": {
-                    "type": "integer"
-                },
-                "nickname": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "integer"
-                },
-                "user_id": {
-                    "type": "integer"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "vo.User": {
+        "res.UpdateUserResponse": {
             "type": "object",
             "properties": {
                 "avatar": {
@@ -679,7 +638,52 @@
                     "type": "string"
                 },
                 "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "gender": {
                     "type": "integer"
+                },
+                "login_at": {
+                    "description": "login time for last times",
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "res.User": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "bio": {
+                    "type": "string"
+                },
+                "birthday": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
                 },
                 "email": {
                     "type": "string"
@@ -692,7 +696,7 @@
                 },
                 "login_at": {
                     "description": "login time for last times",
-                    "type": "integer"
+                    "type": "string"
                 },
                 "nickname": {
                     "type": "string"
@@ -707,7 +711,7 @@
                     "type": "integer"
                 },
                 "updated_at": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
